@@ -1,0 +1,1 @@
+blacklist snd-asihpi
